--- a/timer/assets/css/build.css
+++ b/timer/assets/css/build.css
@@ -835,10 +835,6 @@ input[type="number"] {
   z-index: 50;
 }
 
-.col-span-3 {
-  grid-column: span 3 / span 3;
-}
-
 .mx-2\.5 {
   margin-left: 0.625rem;
   margin-right: 0.625rem;
@@ -852,6 +848,11 @@ input[type="number"] {
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+
+.my-8 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .mb-4 {
@@ -901,6 +902,11 @@ input[type="number"] {
 
 .h-screen {
   height: 100vh;
+}
+
+.max-h-fit {
+  max-height: -moz-fit-content;
+  max-height: fit-content;
 }
 
 .w-fit {
@@ -998,12 +1004,6 @@ input[type="number"] {
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
 }
 
-.truncate {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
 .rounded {
   border-radius: 0.25rem;
 }
@@ -1040,10 +1040,6 @@ input[type="number"] {
 
 .border-4 {
   border-width: 4px;
-}
-
-.border-none {
-  border-style: none;
 }
 
 .border-gray-100 {
@@ -1105,11 +1101,6 @@ input[type="number"] {
 
 .p-5 {
   padding: 1.25rem;
-}
-
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
 }
 
 .px-2 {
@@ -1174,6 +1165,15 @@ input[type="number"] {
   line-height: 1rem;
 }
 
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-\[14vw\] {
+  font-size: 14vw;
+}
+
 .font-medium {
   font-weight: 500;
 }
@@ -1182,14 +1182,17 @@ input[type="number"] {
   line-height: 1;
 }
 
+.leading-\[16vw\] {
+  line-height: 16vw;
+}
+
+.leading-\[14vw\] {
+  line-height: 14vw;
+}
+
 .text-primary-black {
   --tw-text-opacity: 1;
   color: rgb(51 51 51 / var(--tw-text-opacity));
-}
-
-.text-red-500 {
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .text-white {
@@ -1224,16 +1227,6 @@ input[type="number"] {
 
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.placeholder\:text-gray-400::-moz-placeholder {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
-}
-
-.placeholder\:text-gray-400::placeholder {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
 .hover\:border-gray-200:hover {
@@ -1274,12 +1267,6 @@ input[type="number"] {
 .focus\:ring:focus {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
-.focus\:ring-0:focus {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
@@ -1337,6 +1324,11 @@ input[type="number"] {
     font-size: 1rem;
     line-height: 1.5rem;
   }
+
+  .md\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -1390,17 +1382,89 @@ input[type="number"] {
   .lg\:text-\[10vw\] {
     font-size: 10vw;
   }
+
+  .lg\:leading-\[10vw\] {
+    line-height: 10vw;
+  }
 }
 
 @media (min-width: 1280px) {
+  .xl\:col-span-2 {
+    grid-column: span 2 / span 2;
+  }
+
+  .xl\:col-span-3 {
+    grid-column: span 3 / span 3;
+  }
+
+  .xl\:my-8 {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
+
+  .xl\:inline-block {
+    display: inline-block;
+  }
+
+  .xl\:grid {
+    display: grid;
+  }
+
+  .xl\:h-20 {
+    height: 5rem;
+  }
+
+  .xl\:grid-cols-5 {
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+  }
+
+  .xl\:flex-col-reverse {
+    flex-direction: column-reverse;
+  }
+
+  .xl\:gap-0 {
+    gap: 0px;
+  }
+
+  .xl\:p-20 {
+    padding: 5rem;
+  }
+
+  .xl\:py-\[5vh\] {
+    padding-top: 5vh;
+    padding-bottom: 5vh;
+  }
+
   .xl\:text-6xl {
     font-size: 3.75rem;
     line-height: 1;
+  }
+
+  .xl\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .xl\:text-9xl {
+    font-size: 8rem;
+    line-height: 1;
+  }
+
+  .xl\:text-\[10vw\] {
+    font-size: 10vw;
+  }
+
+  .xl\:leading-\[10vw\] {
+    line-height: 10vw;
   }
 }
 
 @media (min-width: 1536px) {
   .\32xl\:text-\[10rem\] {
     font-size: 10rem;
+  }
+
+  .\32xl\:leading-\[10rem\] {
+    line-height: 10rem;
   }
 }
